# promatic3GateControl

./: .gitignore  README.md  pom.xml
api-service/: pom.xml
api-service/src/main/resources/: application-simulate.properties  application.properties
backend/: __init__.py  app.py  pyproject.toml  requirements.txt  setup.py
backend/api/: endpoints.py
backend/services/: dht22Service.py  gateControlService.py  gateStatusService.py
backend/src/services/: gateControlService.py
backend_old/: config.yml
backend_old/src/http/api/: endpoints.py
backend_old/src/services/: dht22Service.py  gateStatusService.py
src/main/java/com/github/lubbyhst/: Application.java  TestController.java
src/main/java/com/github/lubbyhst/components/: GatePinConfiguration.java  JobScheduler.java  MailConfiguraiton.java
src/main/java/com/github/lubbyhst/controller/: ApiController.java  GateStatusController.java  SseWebMvcController.java
src/main/java/com/github/lubbyhst/dto/: BME280Result.java  DHT22Result.java
src/main/java/com/github/lubbyhst/enums/: GateStatus.java
src/main/java/com/github/lubbyhst/error/: GenericErrorController.java
src/main/java/com/github/lubbyhst/gpio/sensors/: BME280.java  DHT22.java  (+2 more)
src/main/java/com/github/lubbyhst/service/: BME280Service.java  DHT22Service.java  GpioService.java  MailService.java
src/main/resources/: application.properties  logging.properties  messages.properties
src/main/resources/templates/: dashboard.html  error.html
src/test/java/com/github/lubbyhst/service/: GateVentilationServiceTest.java
web-ui-service/: pom.xml
(+24 files in other folders)
